myproxy (6.1.14-1+gt6.@distro@) @distro@; urgency=low

  * improve rfc2818 name comparison handling

 -- Globus Toolkit <support@globus.org>  Mon, 08 Jun 2015 19:14:37 -0400

myproxy (6.1.13-2+gt6.@distro@) @distro@; urgency=low

  * Pass pidfile options to more commands

 -- Globus Toolkit <support@globus.org>  Thu, 23 Apr 2015 13:19:53 -0400

myproxy (6.1.13-1+gt6.@distro@) @distro@; urgency=low

  * Fixed 2 instances of underallocation of memory.

 -- Globus Toolkit <support@globus.org>  Tue, 07 Apr 2015 15:29:34 -0400

myproxy (6.1.12-1+gt6.@distro@) @distro@; urgency=low

  * Missing -module

 -- Globus Toolkit <support@globus.org>  Fri, 09 Jan 2015 08:33:26 -0500

myproxy (6.1.11-1+gt6.@distro@) @distro@; urgency=low

  * Fix missing redirect in date detection autoconf

 -- Globus Toolkit <support@globus.org>  Mon, 22 Dec 2014 09:13:30 -0500

myproxy (6.1.10-1+gt6.@distro@) @distro@; urgency=low

  * Fix version and date string macros

 -- Globus Toolkit <support@globus.org>  Tue, 16 Dec 2014 12:31:09 -0500

myproxy (6.1.9-1+gt6.@distro@) @distro@; urgency=low

  * Myproxy systemd fix

 -- Globus Toolkit <support@globus.org>  Mon, 08 Dec 2014 14:09:33 -0500

myproxy (6.1.8-1+gt6.@distro@) @distro@; urgency=low

  * Properly extract MINOR_VERSION from a three digit PACKAGE_VERSION
  * Fix undefined symbols in myproxy-voms plugin
  * Don't install test wrapper
  * Comments are not allowed in tmpfile.d config files

 -- Globus Toolkit <support@globus.org>  Wed, 19 Nov 2014 09:01:36 -0500

myproxy (6.1.7-1+gt6.@distro@) @distro@; urgency=low

  * Allow TLS in myproxy

 -- Globus Toolkit <support@globus.org>  Tue, 18 Nov 2014 14:30:11 -0500

myproxy (6.1.6-2+gt6.@distro@) @distro@; urgency=low

  * Make voms parts optional

 -- Globus Toolkit <support@globus.org>  Thu, 06 Nov 2014 11:04:20 -0500

myproxy (6.1.5-1+gt6.@distro@) @distro@; urgency=low

  * find paths for cert and proxy utils for tests
