@@ -13,7 +13,7 @@ include /usr/share/quilt/quilt.make
 
 name = myproxy
 _name = myproxy
-version = 6.1.14
+version = 6.1.15
 soname = 6
 
 INSTALLDIR = $(CURDIR)/debian/tmp
