@@ -1,3 +1,9 @@
+myproxy (6.1.15-1+gt6.@distro@) @distro@; urgency=low
+
+  * GT-616: Myproxy uses resolved IP address when importing names
+
+ -- Globus Toolkit <support@globus.org>  Thu, 23 Jul 2015 15:11:23 -0400
+
 myproxy (6.1.14-1+gt6.@distro@) @distro@; urgency=low
 
   * improve rfc2818 name comparison handling
